# octoMoA

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LICENSE.txt  MoAProxy.spec  README.md  build.bat  config.yaml  config.yaml.example  installer.nsi  octoMoA.spec  pyproject.toml
app/: admin_api.py  benchmark.py  config.py  db.py  db_config.py  desktop.py  desktop_ui.py  engine.py  main.py  routes.py
app/static/: index.html
